second slide added

--- a/_posts/0000-01-02-Dule-Dev.md
+++ b/_posts/0000-01-02-Dule-Dev.md
@@ -1,5 +1,6 @@
-**this is bold**
-
-*blah*
-
-```code here```
+---
+layout: slide
+title: "Welcome to our second slide!"
+---
+blah blah blah
+Use the left arrow to go back!
